# jarai.cpp.komplett

./: .editorconfig  .gitignore  C++ Best Practices.doc  C++ Fortgeschrittene Tips und Tricks.doc  C++ Fragenkatalog Musterlösung.doc  C++ Fragenkatalog.doc  C-Übersichten.doc  CMakeLists.txt  CMakePresets.json  jarai.cpp.grundlagen.sln  jarai.cpp.komplett.sln
1_Grundlagen/: CMakeLists.txt
1_Grundlagen/01_hello_world/: 01_Hello_World.vcxproj  CMakeLists.txt  _ReadMe.md  main.cpp
1_Grundlagen/02_console_input/: 02_console_input.vcxproj  CMakeLists.txt  _ReadMe.md  main.cpp
1_Grundlagen/03_conditionals/: 03_conditionals.vcxproj  CMakeLists.txt  _ReadMe.md  main.cpp
1_Grundlagen/04_for_loop/: 04_for_loop.vcxproj  CMakeLists.txt  _ReadMe.md  main.cpp
1_Grundlagen/05_while_loop/: 05_while_loop.vcxproj  CMakeLists.txt  _ReadMe.md  main.cpp
1_Grundlagen/06_do_while_loop/: 06_do_while_loop.vcxproj  CMakeLists.txt  _ReadMe.md  main.cpp
1_Grundlagen/07_Zahlenraten/: 07_Zahlenraten.vcxproj  CMakeLists.txt  _ReadMe.md  main.cpp
1_Grundlagen/08_function_overloading/: 08_function_overloading.vcxproj  CMakeLists.txt  anzeigen.cpp  anzeigen.h  main.cpp
1_Grundlagen/09_explicit_conversions/: 09_explicit_conversions.vcxproj  CMakeLists.txt  main.cpp
1_Grundlagen/10_struct_enum_typedef/: 10_struct_and_enum.vcxproj  CMakeLists.txt  main.cpp
2_Pointer_und_Arrays/: CMakeLists.txt
2_Pointer_und_Arrays/1_c_style_pointer/: 01_c_style_pointer.vcxproj  CMakeLists.txt  main.cpp
2_Pointer_und_Arrays/2_const_pointer/: 2_const_pointer.vcxproj  CMakeLists.txt  main.cpp
2_Pointer_und_Arrays/3_parameter_passing/: 02_parameter_passing.vcxproj  CMakeLists.txt  main.cpp
2_Pointer_und_Arrays/4_arrays_and_pointers/: 03_arrays_and_pointers.vcxproj  CMakeLists.txt  main.cpp
2_Pointer_und_Arrays/5_new_and_delete/: 04_new_and_delete.vcxproj  CMakeLists.txt  main.cpp
2_Pointer_und_Arrays/6_function_pointer/: 05_function_pointer.vcxproj  CMakeLists.txt  main.cpp
2_Pointer_und_Arrays/7_pointer_vs_reference/: 07_pointer_vs_reference.vcxproj  CMakeLists.txt  main.cpp
3_Objektorientierung/: CMakeLists.txt
3_Objektorientierung/1_Composition/: 2_composition.vcxproj  Auto.cpp  Auto.h  CMakeLists.txt  Cabrio.cpp  Cabrio.h  ClassDiagram.cd  Main.cpp  Motor.cpp  Motor.h  Rad.cpp  Rad.h  WichtigeVokabeln.md
3_Objektorientierung/1_Kapselung/: 01_Kapselung.vcxproj  CMakeLists.txt  konto.cpp  konto.h  main.cpp
3_Objektorientierung/2_Aggregation/: 2_Aggregation.vcxproj  Auto.cpp  Auto.h  CMakeLists.txt  Cabrio.cpp  Cabrio.h  ClassDiagram.cd  Main.cpp  Motor.cpp  Motor.h  Rad.cpp  Rad.h
3_Objektorientierung/2_Composition/: Auto.h  ClassDiagram.cd  Motor.h
3_Objektorientierung/2_Kapselung/: konto.cpp  konto.h
3_Objektorientierung/3_Vererbung/: 3_Vererbung.vcxproj  CMakeLists.txt  Ikea.cpp  Moebel.cpp  Moebel.h  Schrank.cpp  Schrank.h  Tisch.cpp  Tisch.h
3_Objektorientierung/3_pure_virtual/: 3_pure_virtual.vcxproj  Ikea.cpp  Ikea.h  Schrank.cpp  main.cpp
3_Objektorientierung/4_copy_constructor/: 4_copy_constructor.vcxproj  4_copy_constructor.vcxproj.filters  Auto.cpp  Auto.h  CMakeLists.txt  ClassDiagram.cd  Motor.cpp  Motor.h  main.cpp
5_Advanced_Cpp/: CMakeLists.txt
5_Advanced_Cpp/1_operator_overloading/: 01_operator_overloading.vcxproj  Bruch.cpp  Bruch.h  CMakeLists.txt  main.cpp
5_Advanced_Cpp/2_exceptions/: CMakeLists.txt  Exception.vcxproj  Exception.vcxproj.filters  PartyException.cpp  PartyException.h  main.cpp
5_Advanced_Cpp/3_functor/: 3_functor.vcxproj  3_functor.vcxproj.filters  CMakeLists.txt  FilterFunctor.cpp  FilterFunctor.h  PrintFunctor.cpp  PrintFunctor.h  main.cpp
5_Advanced_Cpp/4_multiple_inheritance/: 4_multiple_inheritance.vcxproj  5_multiple_inheritance.vcxproj.filters  CMakeLists.txt  ClassDiagram.cd  MotorSegelSchiff.cpp  MotorSegelSchiff.h  Motorschiff.cpp  Motorschiff.h  Schiff.cpp  Schiff.h  Segelschiff.cpp  Segelschiff.h  main.cpp
6_Standard_Template_Library/: CMakeLists.txt
6_Standard_Template_Library/1_unique_ptr/: 1_unique_ptr.vcxproj  1_unique_ptr.vcxproj.filters  CMakeLists.txt  FooBar.cpp  FooBar.h  main.cpp
6_Standard_Template_Library/2_shared_ptr/: 2_shared_ptr.vcxproj  CMakeLists.txt  main.cpp
6_Standard_Template_Library/2b_weak_ptr/: 2b_weak_ptr.cpp  2b_weak_ptr.vcxproj  2b_weak_ptr.vcxproj.filters
6_Standard_Template_Library/3_containers_and_iterators/: 3_containers_and_iterators.vcxproj  CMakeLists.txt  main.cpp
6_Standard_Template_Library/4_algorithms/: 4_algorithms.vcxproj  CMakeLists.txt  main.cpp
6_Standard_Template_Library/5_regular_expressions/: 5_regular_expressions.vcxproj  CMakeLists.txt  main.cpp
6_Standard_Template_Library/6_tuple/: 6_tuple.vcxproj  CMakeLists.txt  main.cpp
6_Standard_Template_Library/7_thread_lambda_functor/: 7_thread_lambda_functor.vcxproj  CMakeLists.txt  main.cpp
6_Standard_Template_Library/8_fstream/: 8_fstream.vcxproj  CMakeLists.txt  main.cpp
7_Patterns/: CMakeLists.txt
7_Patterns/1_state_pattern/: 1_state_pattern.vcxproj  1_state_pattern.vcxproj.filters  Abgehoben.cpp  Abgehoben.h  Aufgelegt.cpp  Aufgelegt.h  CMakeLists.txt  Telefon.cpp  Telefon.h  Telefonzustand.cpp  Telefonzustand.h  Verbunden.cpp  Verbunden.h  main.cpp
7_Patterns/2_singleton_antipattern/: 2_singleton_antipattern.vcxproj  2_singleton_antipattern.vcxproj.filters  CMakeLists.txt  ClassDiagramm.ump  Singleton.h  main.cpp
7_Patterns/3_strategy_pattern/: 3_strategy_pattern.vcxproj  3_strategy_pattern.vcxproj.filters  Arbeiter.cpp  Arbeiter.h  CMakeLists.txt  ClassDiagram.cd  ClassDiagramm.ump  Firma.cpp  Firma.h  Maler.cpp  Maler.h  Schreiner.cpp  Schreiner.h  main.cpp
7_Patterns/4_adaptor_pattern/: 4_adaptor_pattern.vcxproj  4_adaptor_pattern.vcxproj.filters  AppleLadegeraet.cpp  AppleLadegeraet.h  CMakeLists.txt  ClassDiagram.cd  ClassDiagramm.ump  IPhone.cpp  IPhone.h  Letter.cpp  Letter.h  PdfCreator.cpp  PdfCreator.h  PdfCreatorToPrinterAdapter.cpp  PdfCreatorToPrinterAdapter.h  Printer.cpp  Printer.h  UsbLadegeraet.cpp  UsbLadegeraet.h  UsbToLightningAdapter.cpp  UsbToLightningAdapter.h  main.cpp
(+78 files in other folders)
